--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Odin Library</title>
 		<script async src="script.js" defer></script>
+		<link rel="stylesheet" href="css-reset.css" />
 		<link rel="stylesheet" href="style.css" />
+
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+		</style>
 	</head>
 	<body>
 		<div class="wrapper">
 			<nav class="navbar">
-				<div class="logo-container"></div>
-				<h1>Odin Library</h1>
-				<div class="button-container">
-					<button class="add-btn">New Book</button>
+				<div class="container">
+					<img src="/javascript-library/icons/logo.png" alt="Logo" />
+					<h1>Odin Library</h1>
+					<div class="button-container">
+						<button class="add-btn">New Book</button>
+					</div>
 				</div>
 			</nav>
-			<div class="library-container">
+			<div class="library">
 				<div class="book-form">
 					<label for="book-title">
 						<span>Title:</span>
@@ -46,14 +53,14 @@
 					<p>Read <input type="checkbox" name="Read" id="read" /></p>
 				</div>
 			</div>
+			<footer>
+				<img
+					style="width: 60px"
+					src="/javascript-library/icons/github.svg"
+					alt="GitHub"
+				/>
+				Made by vaanshii
+			</footer>
 		</div>
-		<footer>
-			<img
-				style="width: 70px"
-				src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png"
-				alt="GitHub"
-			/>
-			Made by vaanshii
-		</footer>
 	</body>
 </html>
