--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<span>Title:</span>
 						<input type="text" name="title" id="book-title" />
 					</label>
-					<label for="book-authoor">
+					<label for="book-author">
 						<span>Author:</span>
 						<input type="text" name="author" id="book-author" />
 					</label>
@@ -53,8 +53,8 @@
 					<p>Author: <span class="book-author">Alessandra</span></p>
 					<p>Pages: <span class="book-pages">265</span></p>
 					<p>
-						<input type="checkbox" name="Read" id="read" /> I have read this
-						book
+						<input type="checkbox" name="Read" class="read" />
+						I have read this book
 					</p>
 				</div>
 			</div>
