Added close button on the form. Added close svg file.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 			</nav>
 			<div class="library">
 				<div class="book-form">
-					<h2>Add Book Info</h2>
+					<div class="top">
+						<h2>Add Book Info</h2>
+						<button class="close-btn">
+							<img src="icons/close-btn.svg" alt="Close" />
+						</button>
+					</div>
 					<label for="book-title">
 						<span>Title:</span>
 						<input type="text" name="title" id="book-title" />
@@ -48,15 +53,15 @@
 				</div>
 
 				<!-- This point is where the card is placed.-->
-				<div class="book-card">
+				<!-- <div class="book-card">
 					<p class="book-title">[PLACEHOLDER]</p>
 					<p>Author: <span class="book-author">Alessandra</span></p>
 					<p>Pages: <span class="book-pages">265</span></p>
 					<p>
-						<input type="checkbox" name="Read" class="read" />
+						<input type="checkbox" name="Read" class="read"/>
 						I have read this book
 					</p>
-				</div>
+				</div> -->
 			</div>
 			<footer>
 				<img
