Added the delete button in the card.

--- a/index.html
+++ b/index.html
@@ -72,15 +72,18 @@
 				</form>
 
 				<!-- This point is where the card is placed.-->
-				<!-- <div class="book-card">
-					<p class="book-title">[PLACEHOLDER]</p>
+				<div class="book-card">
+					<p class="book-title">Title</p>
 					<p>Author: <span class="book-author">Alessandra</span></p>
 					<p>Pages: <span class="book-pages">265</span></p>
 					<p>
-						<input type="checkbox" name="Read" class="read"/>
+						<input type="checkbox" name="Read" class="read" />
 						I have read this book
 					</p>
-				</div> -->
+					<div class="del-btn-container">
+						<button class="delete-btn">Delete</button>
+					</div>
+				</div>
 			</div>
 			<footer>
 				<img
