Removed  from the Title label.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</button>
 					</div>
 					<label for="book-title">
-						<span>*Title:</span>
+						<span>Title:</span>
 						<input
 							type="text"
 							name="title"
@@ -72,7 +72,7 @@
 				</form>
 
 				<!-- This point is where the card is placed.-->
-				<div class="book-card">
+				<!-- <div class="book-card">
 					<p class="book-title">Title</p>
 					<p>Author: <span class="book-author">Alessandra</span></p>
 					<p>Pages: <span class="book-pages">265</span></p>
@@ -83,7 +83,7 @@
 					<div class="del-btn-container">
 						<button class="delete-btn">Delete</button>
 					</div>
-				</div>
+				</div> -->
 			</div>
 			<footer>
 				<img
